--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -31,9 +31,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731192.md#1" target="_blank">【名家专栏】新版大空头碾压小人物</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731192.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GameStop-and-Robinhood-150x120.jpg" align ="left"></a>民粹派投资正在以一种巨大的规模出现，华尔街对此并不高兴。那么，发生了什么事？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 3:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730865.md#1" target="_blank">【名家专栏】拜登的聪明做法难敌中共侵略</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730865.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/40e0b11d25744d0271952a6f50f47e77-600x400-150x120.jpg" align ="left"></a>中共专制政权却不失时机地向拜登新政府表明，他们非常愿意利用其不断扩张的军事力量，把台湾变成一件对抗美国利益的“武器”。此外，这样做还将阻止拜登把经济，甚至与COVID-19相关的问题，与中共最重要的目标“分割开来”，实现征服民主台湾，获取全球霸权的目标。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 2:18 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730381.md#1" target="_blank">吴惠林：温暖的心冷静的脑</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730381.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/904fe23448bbabdfb31b205a165ce0a9-150x120.jpg" align ="left"></a>众所周知，迄21世纪的今日，“经济学”已有二百四十多年的历史了。自1776年由亚当?史密斯(Adam Smith, 1723~1790)的经典巨著《原富》(An Inquiry into the Nature and Causes of the Wealth of Nations, 简称The Wealth of Na.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月03日 7:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/5/n12736110.md#1" target="_blank">王友群：做好事成罪状 首任中共监察部长被整死</a><br></h3>1954年9月，中纪委副书记钱瑛，被任命为中共第一任监察部部长。1955年3月，中纪委更名为中央监察委员会，钱瑛任中监委副书记。1966年文化大革命爆发后，15位中监委委员，14人挨整。钱瑛被当成“叛徒”、“特务”，受到残酷迫害。
-营救快饿死的600名右派
-钱瑛，原名钱秀英，1903年5月14日，出生于湖北省咸宁县.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月06日 7:08 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730292.md#1" target="_blank">李铭：警惕科技巨兽成为“太上政府”</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730292.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230188900-150x120.jpg" align ="left"></a>月三十一日，美国《真相项目》（Project Veritas）公布“追哨人”提供的脸书（Facebook）内部视讯，泄漏了脸书执行长札克伯格有意与拜登政府合作，在重大议题上配合带风向。鉴于多国领袖谴责脸书封杀了前总统川普的言论，脸书高管自承“权力太大”。《真相项目》日前也曾公开了推特创办人多尔西（Jack Dorsey.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月03日 6:37 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732165.md#1" target="_blank">吐为快：天仙子·中共的福与祸</a><br></h3>一党威福拜赤魔，
 百年人祸乱中国。
 中国梦里奈若何？
