--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -44,6 +44,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/9/n12607280.md#1" target="_blank">王友群：美国警告习近平不要一条道走到黑</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/9/n12607280.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/6ad5e9301feaf8ff7e3e6deaa75cc169-600x400-150x120.jpg" align ="left"></a>12月7日，美国国务院与财政部宣布制裁14名中共全国人大副委员长。黑名单上排名第一的是中共政治局委员王晨，其余13人分别是曹建明、张春贤、沈跃跃、吉丙轩、艾力更、依名巴海、王东明、万鄂湘、陈竺、丁仲礼、郝明金、蔡达峰、武维华。14人都是副国级高官。理由是14人对中共强行通过“港版国安法”、扼杀香港的自治权负有重大领导责任。
 
 美国国务卿蓬佩奥发布的声明说.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月10日 3:44 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/27/n12647002.md#1" target="_blank">三退声明精选（2020/12/26）</a><br></h3>我们都知道中共邪党造孽无数，杀生堕胎就可怕，知道它是无神论不敬天地神佛。我们不想沾上它的罪孽做牺牲品。我们化名退出曾经的毒誓，退出它的所有组织！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月27日 8:25 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/24/n12641663.md#1" target="_blank">三退声明精选（2020/12/23）</a><br></h3>以前是老实的生意人，事业做大后不可避免的和中共党官往来，误信洗脑宣传说什么加入共产党事业会更顺利便违心地加入了中共，才发现这就是逆向淘汰的体制。越贪腐，越无耻越没有底线的党员越能往上爬，其中不乏一些巧取豪夺甚至杀人越货勾结黑白两道的衣冠禽兽，雇佣黑社会打击没有中共背景的竞争对手。什么给人民谋福利啦代表人民啦都是台上的狗屁，真正在意的是自己的利益权力。中共这几.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月24日 11:13 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/23/n12639188.md#1" target="_blank">三退声明精选（2020/12/22）</a><br></h3>我在此严正声明，退出中国共产党。我年轻时听信工会人员宣传，误入中共，也一直没当回事。我性格耿直，因为经常撰文发视频批评社会现象和为田园女权发声，惨遭中共以及网络暴民迫害。我不堪迫害，不得不客走他乡出嫁国外。与其让我被开除那可有可无的党籍，不如让我自己站出来，与邪恶的共匪彻底划清界限！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月23日 10:33 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/20/n12632901.md#1" target="_blank">三退声明精选（2020/12/19）</a><br></h3>我今年48岁了。自幼就被迫接受共产党的洗脑教育，起初也相信共产党所宣传的那些东西，后来经历过六四，也看到过更多的对争取权利的老百姓无情打击迫害的所见所闻，自己也亲自遭到cctv的虚假宣传从成都前去山东济宁结果被骗的经历。越发的感到自己原来的三观是错误的。再后来有人给我看外面的消息，也仔细听过《九评共产党》，让我彻底明白，只有赶紧退出邪恶的魔鬼组织才能保证自己.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月20日 10:30 AM							</td></tr>
@@ -57,6 +58,5 @@
 中央文革小组下设办公室、宣传组、理论组、文艺组等机构。金敬迈是当时中央文革小组文艺组负责人。上任不久，他就受命接管文化部，成为文化部最高级别的官员，没有部长头衔，却相当于部长。然而，上任仅123天，金敬迈就一个跟头栽进秦城监狱里.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月12日 8:19 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/11/n12612309.md#1" target="_blank">三退声明精选（2020/12/10）</a><br></h3>共产党当年说为工农大众谋福利，结果工农大众被利用完之后还是被压榨对象。当年承诺的自由民主现在更是成为言论禁区。事实证明共产党的话是不能相信的，谁信了共产党的话谁就得倒大霉。它就是个空前绝后的大骗子，我们声明退出这个骗子党，做回我们自己。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月11日 11:23 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/10/n12609622.md#1" target="_blank">三退声明精选（2020/12/09）</a><br></h3>退休很久了，一直以为只要不交党费就可以自动退党。还几度被国内社区居委会强制缴费，痛苦不堪。直到来了美国探亲有机会接触到了我生命中的明灯大纪元，我的世界有了光！我为可以有这么一个退出共产党的机会而感激涕零，谢谢大纪元。我终于脱离了邪恶组织！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月10日 12:25 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/9/n12605176.md#1" target="_blank">三退声明精选（2020/12/08）</a><br></h3>自愿退出团组织，早年不明真相，被欺骗加入团组织，这些年说过违心的假大空的话，令到自己精神上很痛苦，今天认清了邪党的历史，害人的真相，不愿与害人的邪党组织为伍。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月09日 9:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_3.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046_3.htm">https://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
